# cemcpsec

./: readme.md
Performance Evaluation/: README.md  run_global_evaluation.py
Security Evaluation/: .dockerignore  .gitignore  launcher.py  pyproject.toml
Security Evaluation/app/api/: __init__.py  models.py  routes.py
Security Evaluation/app/app_logging/: __init__.py
Security Evaluation/app/benchmarks/: __init__.py  code_execution_mcp.py
Security Evaluation/app/config/: settings.py
Security Evaluation/app/core/: mcp_client.py  verdicts.py
Security Evaluation/app/prompts/: __init__.py  agent_prompt.py
Security Evaluation/app/streamlit_benchmark/benchmark_results/: results_20260105_123513.json
Security Evaluation/app/tests/: my_tests.py  test_case.txt
Security Evaluation/app/utils/: result_logger.py
Security Evaluation/costume_mcp_servers/: __init__.py  db_init.py  main.py  server_factory.py  threat_demo_server.py
Security Evaluation/data/: code_execution_results.json
Security Evaluation/docker/: docker-compose.yml  dockerfile
Security Evaluation/docker_code/: Dockerfile
Security Evaluation/servers/db_server/: grant_door_access.md  index.md  inspect_db.md  query_db.md  start_fresh_database_session.md
Security Evaluation/servers/filesystem/: create_directory.md  directory_tree.md  index.md  list_allowed_directories.md  search_files.md  write_file.md
Security Evaluation/servers/sequential-thinking/: index.md  sequentialthinking.md
Security Evaluation/static/: index.html
Security Evaluation/static/js/: app.js  charts.js
(+70 files in other folders)
